package ejercicio1.entrega2;

interface ComponenteRestaurante {
    void mostrarInformacion();
}
