package ejercicio1.entrega2;

public interface SistemaExterno {
    void solicitarReserva();
}
