package ejercicio1.entrega2;

public class SistemaReserva {
    public void realizarReserva() {
        System.out.println("Realizando reserva en sistema externo.");
    }
}
