package ejercicio1.entrega2.patronAdicional;

public interface Observador {
    void actualizar(String mensaje);
}
